Minor code cleanup & fix/suppress warnings